@@ -89,6 +89,9 @@ Trunk -  Unreleased
     HIVE-1624. Patch to allows scripts in S3 location
     (Vaibhav Aggarwal via He Yongqiang)
 
+    HIVE-1427. Add metastore schema migration scripts (0.5 -> 0.6)
+    (Carl Steinback via namit)
+
   IMPROVEMENTS
 
     HIVE-1394. Do not update transient_lastDdlTime if the partition is modified by a housekeeping
